<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- ROOT: ME -->
	<LinearLayout
	    android:id="@+id/mainLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/general_padding" >
	    
	    <!-- HEADER of MY PUBLIC PROFILE -->
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/general_margin_vertical"
	        android:singleLine="true"
	        android:text="@string/profile_me_public"
	        android:textColor="@android:color/holo_blue_light"
	        android:textSize="@dimen/header_textSize" />
	    
	    <!-- divider -->
	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:layout_marginBottom="@dimen/general_margin_vertical"
		    android:background="@android:color/darker_gray" />
	    
	    <!-- MY PUBLIC PROFILE -->
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/general_margin_vertical"
		    android:layout_marginBottom="@dimen/general_margin_vertical"
		    android:orientation="horizontal" >
			
		    <!-- AVATAR -->
		    <ImageView
		        android:id="@+id/meAvatar"
		        android:layout_width="@dimen/avatar_width"
		        android:layout_height="@dimen/avatar_height"
		        android:scaleType="centerCrop"        
		        android:layout_marginRight="@dimen/avatar_marginRight"
		        android:contentDescription="@string/avatar_descr"
		        android:src="@android:drawable/ic_menu_gallery" /> 
		    
		    <!-- USERNAME & SHORT BIO -->
		    <LinearLayout 
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" >
				
		        <!-- USERNAME -->
		        <TextView        
			        android:id="@+id/meUsername"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true"
			        android:textColor="#FF4444"
			        android:textSize="@dimen/firstLine_textSize" />
		        
		        <!-- SHORT BIO -->
		    	 <TextView
			        android:id="@+id/meShortBio"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"        
			        android:ellipsize="marquee"
			        android:singleLine="false"
			        android:textSize="@dimen/secondLine_textSize" />
		    	 
		    </LinearLayout>
		    
		</LinearLayout>
	    
		<!-- DESCRIPTION -->
		<TextView
	        android:id="@+id/meDescription"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/general_margin_vertical"
	        android:singleLine="false"
	        android:textSize="@dimen/secondLine_textSize"
	        android:textColor="@android:color/darker_gray" />
		
		<!-- HEADER of MY PRIVATE PHOTOS -->
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/general_margin_vertical"
	        android:layout_marginBottom="@dimen/general_margin_vertical"
	        android:singleLine="true"
	        android:text="@string/profile_me_private"
	        android:textColor="@android:color/holo_blue_light"
	        android:textSize="@dimen/header_textSize" />
	    
	    <!-- divider -->
	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:layout_marginBottom="@dimen/general_margin_vertical"
		    android:background="@android:color/darker_gray" />
	    
    	<ImageView
	        android:id="@+id/meMainPhoto"
	        android:layout_width="match_parent"
	        android:layout_weight="0.5"
	        android:layout_height="0dp"
	        android:layout_marginBottom="@dimen/general_margin_vertical"
	        android:scaleType="centerCrop"        
	        android:contentDescription="@string/photo_descr"
	        android:src="@android:drawable/ic_menu_gallery" />
    	
    	<LinearLayout
		    android:id="@+id/thumbnailPlaceholder"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	    </LinearLayout>
    	
	</LinearLayout>

</ScrollView>