<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!-- 
	<ProgressBar
        android:id="@+id/spinnerProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerProgressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/photo_uploading"
        android:layout_marginTop="@dimen/general_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light" />
    -->
    
    <LinearLayout
        	android:id="@+id/uploadControls"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_marginBottom="@dimen/general_margin_vertical"
		    android:padding="@dimen/general_padding"
		    android:orientation="horizontal"
		    android:background="#ccf3f3f3">
	    	
	    	<Button 
	    	    android:id="@+id/cancelUploadButton"
	    	    android:layout_width="0dp"
	    	    android:layout_weight="0.5"
		    	android:layout_height="@dimen/btn_continue_height"		    	
		    	android:text="@string/general_Cancel" >
		    	<!-- 
		    	android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
		    	android:background="?android:attr/selectableItemBackground" >
		    	-->
	    	</Button>
	    	
	    	<!-- 
	    	<View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="4dp"
	            android:layout_marginRight="4dp"
	            android:background="?android:attr/dividerVertical" />
	    	-->
	    	<Button 
	    	    android:id="@+id/uploadButton"
	    	    android:layout_width="0dp"
	    	    android:layout_weight="0.5"
		    	android:layout_height="@dimen/btn_continue_height"
		    	android:text="@string/general_upload" >
		    	<!-- 
		    	android:drawableStart="@android:drawable/ic_menu_send" 
		    	android:background="?android:attr/selectableItemBackground" > 
		    	-->   	    
	    	</Button>
	    	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/uploadControls"
		    android:padding="@dimen/general_padding"
		    android:layout_marginBottom="@dimen/general_margin_vertical"
		    android:orientation="horizontal"
		    android:background="#CC33B5E5">
		    
	        <TextView
		        android:id="@+id/feedbackTextView"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:gravity="center"
		        android:text="@string/face_detected"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="#FFFFFFFF" />
	        
		</LinearLayout>
   
</RelativeLayout>  